--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,7 @@
+.DS_Store
+
 node_modules/
-
-upload/
-testfiles/
-notused/
-py/
-data/
-
 web/bower_components/
-
-*.DSR
-
-*.pyc
 
 # WebStorm file
 #
